# Realtime-Chat

./: MakeFIle  PROJECT_SUMMARY.md
Core/: build.sh  db.sqlite3  pyproject.toml  requirements.txt
Core/backend/: asgi.py  settings.py  test.html  urls.py  wsgi.py
Core/main/: .gitignore  admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
Core/main/migrations/: 0001_initial.py
Core/staticfiles/: staticfiles.json
Frontend/: .gitignore  App.jsx  app.json  index.jsx  metro.config.js  metro.config.js.bak  package-lock.json  package.json  react-native.config.js
Frontend/common/: Button.jsx  Empty.jsx  Input.jsx  Row.jsx  Thumbnail.jsx  Title.jsx  UserProfile.jsx
Frontend/core/: api.js  constants.js  globalStore.js  secure.js  themeContext.js  utils.js
Frontend/screens/: Friends.jsx  Home.jsx  Message.jsx  Profile.jsx  Requests.jsx  Search.jsx  Settings.jsx  SignIn.jsx  SignUp.jsx  Splash.jsx
Frontend/src/: fontawesome.js
