[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "constantly>=23.10.4",
    "cryptography>=46.0.2",
    "hyperlink>=21.0.0",
    "incremental>=24.7.2",
    "python-dotenv>=1.1.1",
    "sqlparse>=0.5.3",
    "zope>=5.13",
]
